edit meta data for linkedin data scrape

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
-    <meta charset="utf-8" />
+    <meta name="title" property="og:title" content="JiakSEOM - Korean Food Delivery">
+    <meta name="image" property="og:image" content="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
+    <meta name="description" property="og:description" content="Web-app built with React.js, Node libraries, Express and Mongo. Inspired from Yellowsing (Korean Business Directory), JiakSEOM is a Korean food delivery app that uses RESTful API for user interactivity functions. More info on https://github.com/Sean994/JiakSEOM.">
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
